--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <meta content="Olga Albukova" name="author" />
     <meta content="Olga Albukova's test task for Mercaux" name="description" />
+    <meta content="#da532c" name="msapplication-TileColor" />
+    <meta content="#ffffff" name="theme-color" />
+    <title>test task for Mercaux</title>
     <link href="vendor/normalize.css" rel="stylesheet" />
     <link href="pages/index.css" rel="stylesheet" />
     <link
@@ -25,75 +28,149 @@
       sizes="16x16"
       type="image/png"
     />
-    <!--<link href="images/favicon/site.manifest" rel="manifest">-->
     <link
       color="#5bbad5"
       href="images/favicon/safari-pinned-tab.svg"
       rel="mask-icon"
     />
-    <meta content="#da532c" name="msapplication-TileColor" />
-    <meta content="#ffffff" name="theme-color" />
-    <title>task 1</title>
   </head>
 
-  <body>
+  <body class="body">
+    <header class="header">
+      <h1 class="header__title">Olga Albukova's test task for Mercaux</h1>
+    </header>
     <main class="main">
-      <ul class="logo-list">
-        <li class="logo-list__item">
-          <a href="https://12storeez.com/" class="logo-list__link" rel="noopener noreferrer" target="_blank">
-            <img
-              alt="logo-12Storeez"
-              src="images/task1/12Storeez.svg"
-              class="logo-list__img"
-            />
+      <ul class="tasks-list">
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №1
           </a>
         </li>
-        <li class="logo-list__item">
-          <a href="https://www.finn-flare.ru/" class="logo-list__link" rel="noopener noreferrer" target="_blank">
-            <img
-              alt="logo-finnFlare"
-              src="images/task1/finnFlare.svg"
-              class="logo-list__img"
-            />
+        <li class="tasks-list__item">
+          <a
+            href="./task2/task2.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №2
           </a>
         </li>
-        <li class="logo-list__item">
-          <a href="https://www.karenmillen.com/" class="logo-list__link" rel="noopener noreferrer" target="_blank">
-            <img
-              alt="logo-karenMillen"
-              src="images/task1/karenMillen.svg"
-              class="logo-list__img"
-            />
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №3
           </a>
         </li>
-        <li class="logo-list__item">
-          <a href="https://www.frenchconnection.com/" class="logo-list__link" rel="noopener noreferrer" target="_blank">
-            <img
-              alt="logo-frenchConnection"
-              src="images/task1/frenchConnection.svg"
-              class="logo-list__img"
-            />
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №4
           </a>
         </li>
-        <li class="logo-list__item">
-          <a href="https://www.mintvelvet.co.uk/" class="logo-list__link" rel="noopener noreferrer" target="_blank">
-            <img
-              alt="logo-mintVelvet"
-              src="images/task1/mintVelvet.svg"
-              class="logo-list__img"
-            />
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №5
           </a>
         </li>
-        <li class="logo-list__item">
-          <a href="https://www.nike.com/" class="logo-list__link" rel="noopener noreferrer" target="_blank">
-            <img
-              alt="logo-nike"
-              src="images/task1/nike.svg"
-              class="logo-list__img"
-            />
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №6
+          </a>
+        </li>
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task № 7
+          </a>
+        </li>
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №8
+          </a>
+        </li>
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №9
+          </a>
+        </li>
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №10
+          </a>
+        </li>
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №11
+          </a>
+        </li>
+        <li class="tasks-list__item">
+          <a
+            href="./task1/task1.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №12
           </a>
         </li>
       </ul>
+      <section class="info">
+        <h2 class="info__title">
+          Hello dear Mercaux web-developers, I really want to join your team)))
+        </h2>
+        <img src="./images/me.jpg" alt="me" class="info__img" />
+      </section>
     </main>
+    <footer class="footer">
+      <p class="footer__content">&copy; 2021 Olga Albukova</p>
+    </footer>
   </body>
 </html>
