--- a/task4/task4.html
+++ b/task4/task4.html
@@ -32,7 +32,7 @@
       href="../images/favicon/safari-pinned-tab.svg"
       rel="mask-icon"
     />
-    <!-- <script defer src="./task4.js"></script> -->
+    <script defer src="./task4.js"></script>
   </head>
 
   <body class="body">
@@ -52,7 +52,7 @@
                     alt="A succinct description of the picture."
                   />
 
-                  <p class="slider__text">
+                  <p class="slider__text" lang="ru">
                     «Если вы работаете над тем, что для вас действительно важно,
                     вас не приходится подгонять. Вас тянет вперед ваша мечта», —
                     Стив Джобс.
@@ -64,7 +64,7 @@
                     class="slider__img"
                     alt="A succinct description of the picture."
                   />
-                  <p class="slider__text">
+                  <p class="slider__text" lang="ru">
                     «Отправной точкой всех достижений является желание», —
                     Наполеон Хилл.
                   </p>
@@ -75,7 +75,7 @@
                     class="slider__img"
                     alt="A succinct description of the picture."
                   />
-                  <p class="slider__text">
+                  <p class="slider__text" lang="ru">
                     «Избегайте тех, кто пытается подорвать вашу веру в себя. Эта
                     черта свойственна мелким людям. Великий человек, наоборот,
                     внушает вам чувство, что и вы можете стать великим», — Марк
@@ -88,7 +88,7 @@
                     class="slider__img"
                     alt="A succinct description of the picture."
                   />
-                  <p class="slider__text">
+                  <p class="slider__text" lang="ru">
                     Ребята, мне очень нравится это тесовое задание, оно реально
                     интересное и разнообразное))) Для меня очень важно работать
                     с таким профессионалами как Вы))) Я верю, что с Вами и я
@@ -108,6 +108,5 @@
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
     </footer>
-    <script src="./task4.js"></script>
   </body>
 </html>
