--- a/task5/task5.html
+++ b/task5/task5.html
@@ -37,11 +37,7 @@
 
   <body class="body">
     <header class="header">
-      <img
-        alt="logo-12Storeez"
-        src="../images/task1/finnFlare.svg"
-        class="header__logo"
-      />
+      <a class="header__logo" href="https://www.frenchconnection.com/"></a>
       <nav class="header-menu">
         <ul class="header-menu__topmenu">
           <li class="header-menu__item">
@@ -66,6 +62,7 @@
     </header>
     <main class="main">
       <h1 class="main__title">Task №5</h1>
+      <img src="../images/task4/Communication@2x.jpg" class="main__img"/>
     </main>
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
