--- a/task2/task2.html
+++ b/task2/task2.html
@@ -46,10 +46,18 @@
           sit officia mollitia fugiat, quisquam accusamus voluptas repellat
           natus fuga. Quasi, animi tempora.
         </p>
-        <img src="../images/task2/1.png" alt="A succinct description of the picture." class="block__img" />
+        <img
+          src="../images/task2/1.png"
+          alt="A succinct description of the picture."
+          class="block__img"
+        />
       </div>
       <div class="block">
-        <img src="../images/task2/2.png" alt="A succinct description of the picture." class="block__img" />
+        <img
+          src="../images/task2/2.png"
+          alt="A succinct description of the picture."
+          class="block__img"
+        />
         <p class="block__text">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
           suscipit numquam autem praesentium. Molestiae pariatur ducimus earum
@@ -64,10 +72,18 @@
           sit officia mollitia fugiat, quisquam accusamus voluptas repellat
           natus fuga. Quasi, animi tempora.
         </p>
-        <img src="../images/task2/3.png" alt="A succinct description of the picture." class="block__img" />
+        <img
+          src="../images/task2/3.png"
+          alt="A succinct description of the picture."
+          class="block__img"
+        />
       </div>
       <div class="block">
-        <img src="../images/task2/4.png" alt="A succinct description of the picture." class="block__img" />
+        <img
+          src="../images/task2/4.png"
+          alt="A succinct description of the picture."
+          class="block__img"
+        />
         <p class="block__text">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
           suscipit numquam autem praesentium. Molestiae pariatur ducimus earum
