--- a/task6/task6.html
+++ b/task6/task6.html
@@ -8,8 +8,8 @@
     <meta content="Olga Albukova's test task for Mercaux" name="description" />
     <meta content="#da532c" name="msapplication-TileColor" />
     <meta content="#ffffff" name="theme-color" />
-    <title>task 5</title>
-    <link href="./task5.css" rel="stylesheet" />
+    <title>task 6</title>
+    <link href="./task6.css" rel="stylesheet" />
     <link
       href="../images/favicon/apple-touch-icon.png"
       rel="apple-touch-icon"
@@ -32,37 +32,26 @@
       href="../images/favicon/safari-pinned-tab.svg"
       rel="mask-icon"
     />
-    <script defer src="./task5.js"></script>
   </head>
 
   <body class="body">
     <header class="header">
-      <a class="header__logo" href="https://www.frenchconnection.com/"></a>
-      <nav class="header-menu">
-        <ul class="header-menu__topmenu">
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Blog</a>
-            <ul class="submenu">
-              <li class="submenu__item submenu__item_disabled">
-                <a href="#" class="submenu__link">Category</a>
-              </li>
-              <li class="submenu__item">
-                <a href="#" class="submenu__link">Author</a>
-              </li>
-              <li class="submenu__item">
-                <a href="#" class="submenu__link">Archive</a>
-              </li>
-            </ul>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Contact</a>
-          </li>
-        </ul>
-      </nav>
+      <h1 class="header__title">Task №6</h1>
     </header>
     <main class="main">
-      <h1 class="main__title">Task №5</h1>
-      <img src="../images/task4/Communication@2x.jpg" class="main__img" />
+      <div class="block">
+        <p class="block__text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero
+          suscipit numquam autem praesentium. Molestiae pariatur ducimus earum
+          sit officia mollitia fugiat, quisquam accusamus voluptas repellat
+          natus fuga. Quasi, animi tempora.
+        </p>
+        <img
+          src="../images/task2/1.png"
+          alt="A succinct description of the picture."
+          class="block__img"
+        />
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
