--- a/task9/task9.html
+++ b/task9/task9.html
@@ -8,8 +8,8 @@
     <meta content="Olga Albukova's test task for Mercaux" name="description" />
     <meta content="#da532c" name="msapplication-TileColor" />
     <meta content="#ffffff" name="theme-color" />
-    <title>task 8</title>
-    <link href="./task8.css" rel="stylesheet" />
+    <title>task 9</title>
+    <link href="./task9.css" rel="stylesheet" />
     <link
       href="../images/favicon/apple-touch-icon.png"
       rel="apple-touch-icon"
@@ -36,16 +36,13 @@
 
   <body class="body">
     <header class="header">
-      <h1 class="header__title">Task №8</h1>
+      <h1 class="header__title">Task № 9</h1>
     </header>
     <main class="main">
-      <h3 class="main__title">Adress: Russia, Moscow, Stolyarnyj pereulok 3к13</h3>
-      <iframe
-        class="map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.6685655597794!2d37.56617421606015!3d55.76425949857556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a2db783862d%3A0x20398d4463b79f83!2z0KHRgtC-0LvRj9GA0L3Ri9C5INC_0LXRgC4sIDMg0LrQvtGA0L_Rg9GBIDEzLCDQnNC-0YHQutCy0LAsIDEyMzAyMg!5e0!3m2!1sru!2sru!4v1634148231961!5m2!1sru!2sru"
-        allowfullscreen=""
-        loading="lazy"
-      ></iframe>
+      <div class="banner">
+        <div class="banner__img">
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
