--- a/task7/task7.html
+++ b/task7/task7.html
@@ -59,7 +59,7 @@
         </nav>
       </header>
       <main class="main">
-        <h1 class="main__title">Task 7</h1>
+        <h1 class="main__title">Task № 7</h1>
         <section class="places main__places">
           <div class="place" id="head1">
             <h2 class="place__title">Куршская коса</h2>
