--- a/task10/task10.html
+++ b/task10/task10.html
@@ -8,8 +8,8 @@
     <meta content="Olga Albukova's test task for Mercaux" name="description" />
     <meta content="#da532c" name="msapplication-TileColor" />
     <meta content="#ffffff" name="theme-color" />
-    <title>task 5</title>
-    <link href="./task5.css" rel="stylesheet" />
+    <title>task 10</title>
+    <link href="./task10.css" rel="stylesheet" />
     <link
       href="../images/favicon/apple-touch-icon.png"
       rel="apple-touch-icon"
@@ -32,37 +32,25 @@
       href="../images/favicon/safari-pinned-tab.svg"
       rel="mask-icon"
     />
-    <script defer src="./task5.js"></script>
   </head>
 
   <body class="body">
     <header class="header">
-      <a class="header__logo" href="https://www.frenchconnection.com/"></a>
-      <nav class="header-menu">
-        <ul class="header-menu__topmenu">
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Blog</a>
-            <ul class="submenu">
-              <li class="submenu__item submenu__item_disabled">
-                <a href="#" class="submenu__link">Category</a>
-              </li>
-              <li class="submenu__item">
-                <a href="#" class="submenu__link">Author</a>
-              </li>
-              <li class="submenu__item">
-                <a href="#" class="submenu__link">Archive</a>
-              </li>
-            </ul>
-          </li>
-          <li class="header-menu__item">
-            <a href="#" class="header-menu__link">Contact</a>
-          </li>
-        </ul>
-      </nav>
+      <h1 class="header__title">Task № 10</h1>
     </header>
     <main class="main">
-      <h1 class="main__title">Task № 5</h1>
-      <img src="../images/task4/Communication@2x.jpg" class="main__img" />
+      <a
+        href="https://www.finn-flare.ru/"
+        class="logo-link"
+        rel="noopener noreferrer"
+        target="_blank"
+      >
+        <img
+          alt="logo-finnFlare"
+          src="../images/task10/logo-ff.png"
+          class="logo-img"
+        />
+      </a>
     </main>
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
