--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
         </li>
       </ul>
       <section class="info">
-        <h2 class="info__title">
-          Hello dear Mercaux web-developers, I really want to join your team)))
+        <h2 class="info__title" lang="ru">
+          Привет, ребята) <br/> 11 заданий сделала. 12-ое тоже обязательно сделаю, очень уж оно интересное, но пока отправлю это, чтобы вы меня совсем не потеряли)) Оооочень хочу к вам в команду, обещаю стать ценным сотрудником 	&#128579;
         </h2>
-        <img src="./images/me.jpg" alt="me" class="info__img" />
+        <img src="./images/me.jpg" alt="me." class="info__img" />
       </section>
     </main>
     <footer class="footer">
