--- a/task1/task1.html
+++ b/task1/task1.html
@@ -48,7 +48,7 @@
             target="_blank"
           >
             <img
-              alt="logo-12Storeez"
+              alt="logo-12Storeez."
               src="../images/task1/12Storeez.svg"
               class="logo-list__img"
             />
@@ -62,7 +62,7 @@
             target="_blank"
           >
             <img
-              alt="logo-finnFlare"
+              alt="logo-finnFlare."
               src="../images/task1/finnFlare.svg"
               class="logo-list__img"
             />
@@ -76,7 +76,7 @@
             target="_blank"
           >
             <img
-              alt="logo-karenMillen"
+              alt="logo-karenMillen."
               src="../images/task1/karenMillen.svg"
               class="logo-list__img"
             />
@@ -90,7 +90,7 @@
             target="_blank"
           >
             <img
-              alt="logo-frenchConnection"
+              alt="logo-frenchConnection."
               src="../images/task1/frenchConnection.svg"
               class="logo-list__img"
             />
@@ -104,7 +104,7 @@
             target="_blank"
           >
             <img
-              alt="logo-mintVelvet"
+              alt="logo-mintVelvet."
               src="../images/task1/mintVelvet.svg"
               class="logo-list__img"
             />
@@ -118,7 +118,7 @@
             target="_blank"
           >
             <img
-              alt="logo-nike"
+              alt="logo-nike."
               src="../images/task1/nike.svg"
               class="logo-list__img"
             />
