--- a/task10/task10.html
+++ b/task10/task10.html
@@ -46,7 +46,7 @@
         target="_blank"
       >
         <img
-          alt="logo-finnFlare"
+          alt="logo-finnFlare."
           src="../images/task10/logo-ff.png"
           class="logo-img"
         />
