--- a/task7/task7.html
+++ b/task7/task7.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -75,7 +75,7 @@
             <img
               class="place__image"
               src="../images/task7/kosa.jpg"
-              alt="Куршская коса"
+              alt="Куршская коса."
             />
             <div class="place__paragraphs">
               <p class="place__text">
@@ -108,7 +108,7 @@
             <img
               class="place__image"
               src="../images/task7/kolski.jpg"
-              alt="Кольский"
+              alt="Кольский."
             />
             <div class="place__paragraphs">
               <p class="place__text">
@@ -141,7 +141,7 @@
             <img
               class="place__image"
               src="../images/task7/altay.jpg"
-              alt="Алтай"
+              alt="Алтай."
             />
             <div class="place__paragraphs">
               <p class="place__text">
@@ -174,7 +174,7 @@
             <img
               class="place__image"
               src="../images/task7/baykal.jpg"
-              alt="Зимний Байкал"
+              alt="Зимний Байкал."
             />
             <div class="place__paragraphs">
               <p class="place__text">
@@ -206,7 +206,7 @@
             <img
               class="place__image"
               src="../images/task7/karelia.jpg"
-              alt="Карелия"
+              alt="Карелия."
             />
             <p class="place__text">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
