--- a/task12/task12.html
+++ b/task12/task12.html
@@ -40,7 +40,7 @@
     </header>
     <main class="main">
       <button class="add-button" type="button" aria-label="Добавить"></button>
-      <section class="popup" id="popup" novalidate>
+      <section class="popup" id="popup">
         <form
           class="popup__container"
           name="Register"
