--- a/task5/task5.html
+++ b/task5/task5.html
@@ -62,7 +62,11 @@
     </header>
     <main class="main">
       <h1 class="main__title">Task № 5</h1>
-      <img src="../images/task4/Communication@2x.jpg" class="main__img" />
+      <img
+        src="../images/task4/Communication@2x.jpg"
+        class="main__img"
+        alt="A succinct description of the picture."
+      />
     </main>
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
