--- a/task12/task12.html
+++ b/task12/task12.html
@@ -87,7 +87,7 @@
           />
           <span class="popup__span-error" id="email-input-error"></span>
           <button class="popup__button-save" id="cards-save" type="submit">
-            Создать
+            Зарегистрировать
           </button>
         </form>
       </section>
