--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <section class="info">
         <h2 class="info__title" lang="ru">
           Привет, ребята) <br />
-          11 заданий сделала. 12-ое тоже обязательно сделаю, очень уж оно
+          11 заданий сделала. 12-ое пока только верстка, но тоже обязательно доделаю, очень уж оно
           интересное, но пока отправлю это, чтобы вы меня совсем не потеряли))
           Оооочень хочу к вам в команду, обещаю стать ценным сотрудником
           &#128579;
