--- a/task11/task11.html
+++ b/task11/task11.html
@@ -11,6 +11,7 @@
     <title>task 11</title>
     <link href="./task11.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.js"></script>
+    <script src="./index.js"></script>
     <link
       href="../images/favicon/apple-touch-icon.png"
       rel="apple-touch-icon"
@@ -48,6 +49,9 @@
       <section class="popup popup_opened" id="popupAdd">
         <div class="popup__container popup__container_type_add" id="add">
           <img src="../images/task11/layer-1.png" class="popup__img" />
+          <div class="circle circle"></div>
+         <div class="circle circle"></div>
+         <div class="circle circle"></div>
         </div>
       </section>
       <section class="popup popup_opened" id="popupFoto">
