--- a/task4/task4.html
+++ b/task4/task4.html
@@ -40,6 +40,18 @@
       <h1 class="header__title">Task № 4</h1>
     </header>
     <main class="main">
+      <h3 class="main__title">Дополнительно реализовано:</h3>
+      <ul>
+        <li>
+          поддержка перелистывания слайдов смахиванием (touch swipe) для
+          устройств с сенсорным экраном и перетаскиванием мышью – разрешает
+          листать слайды свайпом и перемещением курсора мыши при зажатой левой
+          кнопки мыши;
+        </li>
+        <li>
+          остановка автоматической смены слайдов при поднесении к нему курсора
+        </li>
+      </ul>
       <div class="container">
         <div class="slider">
           <div class="slider__container">
