--- a/task12/task12.html
+++ b/task12/task12.html
@@ -83,7 +83,7 @@
             type="email"
             required
             placeholder="email"
-            name="link"
+            name="email"
           />
           <span class="popup__span-error" id="email-input-error"></span>
           <button class="popup__button-save" id="cards-save" type="submit">
