--- a/task12/task12.html
+++ b/task12/task12.html
@@ -40,6 +40,19 @@
     </header>
     <main class="main">
       <button class="add-button" type="button" aria-label="Добавить"></button>
+      <h3 class="main__title">Дополнительно реализовано:</h3>
+      <ul>
+        <li>добавлены описания ошибок при вводе значений в поля формы;</li>
+        <li>
+          кнопка становится активна, только когдa все поля формы заполнены
+          верно;
+        </li>
+        <li>
+          в функцию валидации заложена масштабируемость, на случай если на
+          странице появятся другие формы.
+        </li>
+      </ul>
+
       <section class="popup" id="popup">
         <form
           class="popup__container"
