--- a/index.html
+++ b/index.html
@@ -160,14 +160,24 @@
             Task №12
           </a>
         </li>
+        <li class="tasks-list__item tasks-list__item_last">
+          <a
+            href="./task13/task13.html"
+            class="tasks-list__link"
+            rel="noopener noreferrer"
+            target="_blank"
+          >
+            Task №13 (здесь 12 задание сделано в соответствии с тех. заданием)
+          </a>
+        </li>
       </ul>
       <section class="info">
         <h2 class="info__title" lang="ru">
           Привет, ребята) <br />
-          11 заданий сделала. 12-ое пока только верстка, но тоже обязательно доделаю, очень уж оно
-          интересное, но пока отправлю это, чтобы вы меня совсем не потеряли))
-          Оооочень хочу к вам в команду, обещаю стать ценным сотрудником
-          &#128579;
+          11 заданий сделала. 12-ое пока только верстка, но тоже обязательно
+          доделаю, очень уж оно интересное, но пока отправлю это, чтобы вы меня
+          совсем не потеряли)) Оооочень хочу к вам в команду, обещаю стать
+          ценным сотрудником &#128579;
         </h2>
         <img src="./images/me.jpg" alt="me." class="info__img" />
       </section>
