--- a/task11/task11.html
+++ b/task11/task11.html
@@ -41,20 +41,19 @@
       <h1 class="header__title">Task № 11</h1>
     </header>
     <main class="main">
+       <div class="circle circle_grey"></div>
+         <div class="circle pulse_green"></div>
       <div class="screen screen_first"></div>
       <div class="screen screen_second"></div>
       <div class="screen screen_third">
           <div class="layer"></div>
       </div>
-      <section class="popup popup_opened" id="popupAdd">
+      <section class="popup" id="popupAdd">
         <div class="popup__container popup__container_type_add" id="add">
           <img src="../images/task11/layer-1.png" class="popup__img" />
-          <div class="circle circle"></div>
-         <div class="circle circle"></div>
-         <div class="circle circle"></div>
         </div>
       </section>
-      <section class="popup popup_opened" id="popupFoto">
+      <section class="popup" id="popupFoto">
         <div class="popup__container popup__container_type_foto" id="foto">
           <img src="../images/task11/layer-2.png" class="popup__img" />
         </div>
