--- a/task12/task12.html
+++ b/task12/task12.html
@@ -51,8 +51,16 @@
           в функцию валидации заложена масштабируемость, на случай если на
           странице появятся другие формы.
         </li>
+        <li>
+          всплывающее окно закрывается также по нажатию на кнопку ESC и при
+          клике на оверлей.
+        </li>
       </ul>
-
+      <h4 class="main__title">
+        P.S. вы не подумайте, я умею читать тех. задание &#128516; Просто такая
+        реализация мне показалась более логичной. Но в task13 я сделала все по
+        заданию)
+      </h4>
       <section class="popup" id="popup">
         <form
           class="popup__container"
