--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <meta content="Olga Albukova" name="author" />
-    <meta content="Olga Albukova's test task for Mercaux" name="description" />
+    <meta content="Olga Albukova's test task" name="description" />
     <meta content="#da532c" name="msapplication-TileColor" />
     <meta content="#ffffff" name="theme-color" />
-    <title>test task for Mercaux</title>
+    <title>test task</title>
     <link href="pages/index.css" rel="stylesheet" />
     <link
       href="images/favicon/apple-touch-icon.png"
@@ -36,7 +36,7 @@
 
   <body class="body">
     <header class="header">
-      <h1 class="header__title">Olga Albukova's test task for Mercaux</h1>
+      <h1 class="header__title">Olga Albukova's test task</h1>
     </header>
     <main class="main">
       <ul class="tasks-list">
@@ -142,16 +142,6 @@
         </li>
         <li class="tasks-list__item">
           <a
-            href="./task11/task11.html"
-            class="tasks-list__link"
-            rel="noopener noreferrer"
-            target="_blank"
-          >
-            Task №11
-          </a>
-        </li>
-        <li class="tasks-list__item">
-          <a
             href="./task12/task12.html"
             class="tasks-list__link"
             rel="noopener noreferrer"
@@ -160,27 +150,17 @@
             Task №12
           </a>
         </li>
-        <li class="tasks-list__item tasks-list__item_last">
+        <li class="tasks-list__item">
           <a
             href="./task13/task13.html"
             class="tasks-list__link"
             rel="noopener noreferrer"
             target="_blank"
           >
-            Task №13 (здесь 12 задание сделано в соответствии с тех. заданием)
+            Task №13
           </a>
         </li>
       </ul>
-      <section class="info">
-        <h2 class="info__title" lang="ru">
-          Привет, ребята) <br />
-          11 заданий сделала. 12-ое пока только верстка, но тоже обязательно
-          доделаю, очень уж оно интересное, но пока отправлю это, чтобы вы меня
-          совсем не потеряли)) Оооочень хочу к вам в команду, обещаю стать
-          ценным сотрудником &#128579;
-        </h2>
-        <img src="./images/me.jpg" alt="me." class="info__img" />
-      </section>
     </main>
     <footer class="footer">
       <p>
