--- a/task12/task12.html
+++ b/task12/task12.html
@@ -40,27 +40,6 @@
     </header>
     <main class="main">
       <button class="add-button" type="button" aria-label="Добавить"></button>
-      <h3 class="main__title">Дополнительно реализовано:</h3>
-      <ul>
-        <li>добавлены описания ошибок при вводе значений в поля формы;</li>
-        <li>
-          кнопка становится активна, только когдa все поля формы заполнены
-          верно;
-        </li>
-        <li>
-          в функцию валидации заложена масштабируемость, на случай если на
-          странице появятся другие формы.
-        </li>
-        <li>
-          всплывающее окно закрывается также по нажатию на кнопку ESC и при
-          клике на оверлей.
-        </li>
-      </ul>
-      <h4 class="main__title">
-        P.S. вы не подумайте, я умею читать тех. задание &#128516; Просто такая
-        реализация мне показалась более логичной. Но в task13 я сделала все по
-        заданию)
-      </h4>
       <section class="popup" id="popup">
         <form
           class="popup__container"
@@ -69,40 +48,32 @@
           action="#"
           id="form"
         >
-          <button
+          <a
             class="button-close"
             id="form-close"
-            type="reset"
             aria-label="Закрыть"
-          ></button>
+          ></a>
           <h2 class="popup__title">Регистрация</h2>
           <input
             class="popup__input popup__input_type_name"
             id="name-input"
             type="text"
-            required
             placeholder="Имя"
             name="name"
-            minlength="3"
-            maxlength="30"
           />
           <span class="popup__span-error" id="name-input-error"></span>
           <input
             class="popup__input popup__input_type_surname"
             id="surname-input"
             type="text"
-            required
             placeholder="Фамилия"
             name="surname"
-            minlength="3"
-            maxlength="30"
           />
           <span class="popup__span-error" id="surname-input-error"></span>
           <input
             class="popup__input popup__input_type_email"
             id="email-input"
-            type="email"
-            required
+            type="text"
             placeholder="email"
             name="email"
           />
@@ -130,7 +101,6 @@
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
     </footer>
-    <script src="./js/validate.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./task12.js"></script>
   </body>
 </html>
