--- a/task4/task4.html
+++ b/task4/task4.html
@@ -101,12 +101,9 @@
                     alt="A succinct description of the picture."
                   />
                   <p class="slider__text" lang="ru">
-                    Ребята, мне очень нравится это тесовое задание, оно реально
-                    интересное и разнообразное))) Для меня очень важно работать
-                    с таким профессионалами как Вы))) Я верю, что с Вами и я
-                    могу стать таким же профессионалом, влюбленным в свою
-                    профессию! И верю, что вы не пожалеете, если поверите в
-                    меня))) &#128521;
+                    «Не спрашивайте, в чем нуждается мир, — спросите себя, что
+                    наполняет вас жизнью. Миру нужны люди, наполненные жизнью»,
+                    — Говард Трумэн
                   </p>
                 </div>
               </div>
