--- a/task13/task13.html
+++ b/task13/task13.html
@@ -40,6 +40,22 @@
     </header>
     <main class="main">
       <button class="add-button" type="button" aria-label="Добавить"></button>
+      <h3 class="main__title">Дополнительно к Task № 12 реализовано:</h3>
+      <ul>
+        <li>добавлены описания ошибок при вводе значений в поля формы;</li>
+        <li>
+          кнопка становится активна, только когдa все поля формы заполнены
+          верно;
+        </li>
+        <li>
+          в функцию валидации заложена масштабируемость, на случай если на
+          странице появятся другие формы.
+        </li>
+        <li>
+          всплывающее окно закрывается также по нажатию на кнопку ESC и при
+          клике на оверлей.
+        </li>
+      </ul>
       <section class="popup" id="popup">
         <form
           class="popup__container"
@@ -48,32 +64,40 @@
           action="#"
           id="form"
         >
-          <a
+          <button
             class="button-close"
             id="form-close"
+            type="reset"
             aria-label="Закрыть"
-          ></a>
+          ></button>
           <h2 class="popup__title">Регистрация</h2>
           <input
             class="popup__input popup__input_type_name"
             id="name-input"
             type="text"
+            required
             placeholder="Имя"
             name="name"
+            minlength="3"
+            maxlength="30"
           />
           <span class="popup__span-error" id="name-input-error"></span>
           <input
             class="popup__input popup__input_type_surname"
             id="surname-input"
             type="text"
+            required
             placeholder="Фамилия"
             name="surname"
+            minlength="3"
+            maxlength="30"
           />
           <span class="popup__span-error" id="surname-input-error"></span>
           <input
             class="popup__input popup__input_type_email"
             id="email-input"
-            type="text"
+            type="email"
+            required
             placeholder="email"
             name="email"
           />
@@ -101,6 +125,7 @@
     <footer class="footer">
       <p class="footer__content">&copy; 2021 Olga Albukova</p>
     </footer>
-    <script src="./task13.js"></script>
+    <script src="./js/validate.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
